write formulas to exchange amounts